<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_app"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/splash_horizontal_margin"
    android:paddingRight="@dimen/splash_horizontal_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_text_white"
        android:layout_above="@+id/layoutImage"
        android:scaleType="fitCenter"
        android:layout_alignLeft="@+id/layoutImage"
        android:layout_alignRight="@+id/layoutImage"
        android:padding="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/copyright"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/light_house"
            android:layout_marginRight="5dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="5dp">

            <TextView
                android:id="@+id/bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/bluetooth"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/beaconTechnologies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="left|center"
                android:text="@string/beacon_technologies"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>




    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12" />

</RelativeLayout>