<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/beaconList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fadingEdge="none"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <ImageButton
        android:id="@+id/btnScanner"
        android:layout_width="@dimen/action_button_width"
        android:layout_height="@dimen/action_button_width"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:elevation="7dp"
        android:layout_marginBottom="@dimen/action_button_margin_bottom"
        android:background="@drawable/action_button"
        android:padding="15dp"
        android:scaleType="centerInside"
        android:src="@drawable/scanner_icon"
        android:onClick="onClickScanner"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/orange_app"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/empty"
                android:paddingBottom="@dimen/tool_bar_vertical_margin"
                android:paddingTop="@dimen/tool_bar_vertical_margin"
                android:scaleType="centerInside"
                android:src="@drawable/tool_bar_logo" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/placeZone"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/place_"
                    android:textColor="#AAAAAA"
                    android:textSize="@dimen/sp14"/>

                <TextView
                    android:id="@+id/place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#444444"
                    android:textSize="@dimen/sp14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblZone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/zone_"
                    android:textColor="#AAAAAA"
                    android:textSize="@dimen/sp14"/>

                <TextView
                    android:id="@+id/zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#444444"
                    android:textSize="@dimen/sp14"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
