<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|left"
    android:orientation="horizontal"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/beaconIcon"
        android:layout_width="@dimen/beacon_icon_row_width"
        android:layout_height="@dimen/beacon_icon_row_width"
        android:layout_marginRight="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/black_beacon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="@dimen/title_row_width"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/name_"
                android:textColor="#AAAAAA"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/sp16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblMajor"
                android:layout_width="@dimen/title_row_width"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/major_"
                android:textColor="#AAAAAA"
                android:textSize="@dimen/sp14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/major"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="#AAAAAA"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/accuracy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="#AAAAAA"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rssi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="right|center"
                    android:singleLine="true"
                    android:textColor="#AAAAAA"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblMinor"
                android:layout_width="@dimen/title_row_width"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/minor_"
                android:textColor="#AAAAAA"
                android:textSize="@dimen/sp14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/minor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.66"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="#AAAAAA"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/proximity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.34"
                    android:ellipsize="end"
                    android:gravity="right|center"
                    android:singleLine="true"
                    android:textColor="#AAAAAA"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>